--- a/HTML/table.html
+++ b/HTML/table.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
+
+    <style>
+        table {
+            border: 1px solid black;
+            border-collapse: collapse;
+
+        }
+
+        td, th {
+            border: 1px solid black
+        }
+
+    </style>
 </head>
 
 <body>
