--- a/HTML/font.html
+++ b/HTML/font.html
@@ -5,7 +5,7 @@
   <style>
     div {
       border: 3px solid black; 
-      font-family: arial; sans-serif; 
+      font-family: arial; sans-serif; /* font-family: "arial" ou se o navegador não suportar "sans-serif" */
       font-size: 28px;
       font-weight: bold;
     }
@@ -20,7 +20,7 @@
 
    <!--
 
-font-family: "arial" ou se o navegador não suportar "sans-serif";
+
 
   
   -->
