--- a/HTML/style_ugly.html
+++ b/HTML/style_ugly.html
@@ -11,12 +11,18 @@
             color: rgb(75, 173, 75);
             text-align: center;
         }
+
+        #foo, #bar {
+            color: rgb(101, 101, 174)
+        }
+
     </style>
 </head>
 
 <body>
-    <h1>Welcome to my Web Page!</h1>
-    <h1>this is a second heading</h1>
+    <h1 id="foo">Heading 1</h1>
+    <h1 id="bar">Heading 2</h1>
+    <h1>Heading 3</h1>
 
     Hello, world!
 </body>
