--- a/HTML/table.html
+++ b/HTML/table.html
@@ -14,7 +14,8 @@
         }
 
         td, th {
-            border: 1px solid black
+            border: 1px solid black;
+            padding: 5px; /* margem entre as bordas e o texto */
         }
 
     </style>
