--- a/HTML/style_ugly.html
+++ b/HTML/style_ugly.html
@@ -12,10 +12,13 @@
             text-align: center;
         }
 
-        #foo, #bar {
+        #foo, #bar {                           /* #id */
             color: rgb(101, 101, 174)
         }
 
+        .baz {                                 /* .baz */    
+            color: rgb(203, 203, 82)
+        }
     </style>
 </head>
 
@@ -24,7 +27,33 @@
     <h1 id="bar">Heading 2</h1>
     <h1>Heading 3</h1>
 
+    <h2 class="baz">título</h2>
+    <h2 class="baz"></h2>
+
     Hello, world!
 </body>
 
 </html>
+
+<!-- 
+
+CSS specificity
+
+1. inline 
+2. id
+3. class
+4. type
+
+
+CSS Selectors
+
+a,b    multiple element selector
+a b    descendant selector
+a > b  child selector
+a + b  adjacent sibling selector 
+[a=b]  attribute selector
+a:b    pseudoclass selector
+a::b   pseudoelement selector 
+
+
+-->
