--- a/HTML/style_ugly.html
+++ b/HTML/style_ugly.html
@@ -16,7 +16,7 @@
             color: rgb(101, 101, 174)
         }
 
-        .baz {                                 /* .baz */    
+        .baz {                                 /* .class */    
             color: rgb(203, 203, 82)
         }
     </style>
